src/test/deca/syntax/valid/sansObjet/opPlusFloat.deca
{
    float x = 1.235654;
    float y = 1.2588;
    float z = x + y;
}
