src/test/deca/syntax/invalid/sansObjet/NoOpenBraceInMain.deca

    float x = 2020.01f;
}